fixed operator bug where it would sometimes calculate and show odd behaviour with different operators fixed window overflowing

--- a/style.css
+++ b/style.css
@@ -35,6 +35,8 @@ body{
     box-shadow: -5px 7px inset;
     text-shadow: -1px 0 #7da16c56, 0 1px #7da16c56, 1px 0 #7da16c56, 0 -1px #7da16c56;
     background-image: radial-gradient(#aade93, #aade93, #94c57f);
+    overflow: hidden;
+    word-wrap: break-word;
 }
 
 .field{
@@ -68,7 +70,7 @@ button{
     width: 90px;
     height: 90px;
     color:#2a2c33;
-    font-size: 20px;
+    font-size: 25px;
     border-radius: 10px;
     margin: 5px;
     justify-content: center;
